refactor: Rename project to Catalogo Sungap
Update project name, metadata, and assets to reflect the new "Catalogo Sungap" branding. This includes changes to package.json, index.html, metadata.json, pages/Home.tsx, and removal of old PWA configurations. Also, switch from BrowserRouter to HashRouter for improved deployment flexibility.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#007A7A" />
-    <meta name="description" content="Cadeira & Cia - Encontre o assento perfeito" />
-    <title>Cadeira & Cia</title>
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/5351/5351486.png" />
+    <meta name="description" content="Catalogo Sungap - Encontre o assento perfeito" />
+    <title>Catalogo Sungap</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
