fix: Correct application name and minor UI text
Updates the application name from "Catalogo Sungap" to "Catálogo Sungap" across various configuration and display files. Additionally, makes a minor correction to a carousel image title and adds a new carousel image entry with a description.

Also includes imports for `ZoomIn` and `X` icons in `HeroCarousel.tsx` and a new state variable `isZoomOpen` to manage zoom modal state, along with logic to pause auto-play when zoom is active.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Catalogo Sungap - Encontre o assento perfeito" />
-    <title>Catalogo Sungap</title>
+    <meta name="description" content="Catálogo Sungap - Encontre o assento perfeito" />
+    <title>Catálogo Sungap</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
