refactor: Rename application to Grupo Oplin
Updates the application name and references from "Sungap" to "Grupo Oplin" across project files, including package.json, index.html, metadata.json, constants.ts, Home.tsx, and Services.tsx. Introduces a new `LogoMarquee` component and adds it to the Home page. Also, adds animation and keyframes for the marquee effect to the Tailwind CSS configuration.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Catálogo Sungap - Encontre a sombra perfeita" />
-    <title>Catálogo Sungap</title>
+    <meta name="description" content="Catálogo Grupo Oplin - Encontre a sombra perfeita" />
+    <title>Catálogo Grupo Oplin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,6 +28,15 @@
             fontFamily: {
               sans: ["Poppins", "Inter", "sans-serif"],
               display: ["Poppins", "sans-serif"],
+            },
+            animation: {
+              marquee: 'marquee 25s linear infinite',
+            },
+            keyframes: {
+              marquee: {
+                '0%': { transform: 'translateX(0%)' },
+                '100%': { transform: 'translateX(-50%)' },
+              },
             },
           },
         },
